--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase": "^10.3.1",
     "firebase-admin": "^11.10.1"
   }
 }
