--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.3.1",
-    "firebase-admin": "^11.10.1"
+    "firebase-admin": "^11.10.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
